--- a/Deliver-with-Friends.CSharp.csproj
+++ b/Deliver-with-Friends.CSharp.csproj
@@ -63,13 +63,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\DebugGridInspector.cs" />
-    <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\Source\Building.cs" />
     <Compile Include="Assets\Source\BuildingProperties.cs" />
+    <Compile Include="Assets\Source\DebugGridInspector.cs" />
     <Compile Include="Assets\Source\GameGrid.cs" />
     <Compile Include="Assets\Source\GridNode.cs" />
+    <Compile Include="Assets\Source\MainController.cs" />
     <Compile Include="Assets\Source\Pathfinding.cs" />
+    <Compile Include="Assets\Source\Player.cs" />
+    <Compile Include="Assets\Source\PlayerController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
